--- a/index.html
+++ b/index.html
@@ -1,42 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html>
-<!--
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
+  <title>The Human Factor</title>
+  <link rel="stylesheet" href="welcome.css">
+</head>
 
-Created with Squiffy 5.1.3
+<body>
+    <div class = "welcome">
+        <h1>The Human Factor</h1>
+        <p>The human factor is an old-school style text adventure game series proposed as a concept by a graphic design student researching the connection between decision making and connotations in an environment where the choice is put into context. The premise is that there could be a difference in answers when the subject is asked about a connection indirectly rather than directly, thus exploring a subconscious connection. Basically, the goal of the games is to analyse the answers of players in accordance to expected connotations of certain answers as distributed by age groups, gender and education.  We hope to analyse the results to compare them to our predictions, so it would be great if you could fill out the following:</p>
+    </div>   
+    <div class = "uinput">
+        
+        <p>AGE:</p>
+        <form id = "inputage">
+            <input type="text" name="inputage">
+        </form>
+        <p>GENDER:</p>
+        <form id = "inputgender">
+            <input type="text" name="inputgender">
+        </form>
+        <p>LEVEL OF EDUCATION:</p>
+        <form id = "inputeducation">
+        <input type="text" name="inputeducation">
+        </form>
+        <br><br>
+        <button buttontype="button" class="btn btn-success btn-lg" onclick="location.href='games.html';">SUBMIT</button>
+        <br><br>
+        <button buttontype="button" onclick="location.href='games.html';">or continue without filling out information</button>
+    </div>
 
-
-https://github.com/textadventures/squiffy
-
--->
-	<head>
-		<title></title>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<script src="jquery.min.js"></script>
-		<script src="story.js" charset="UTF-8"></script>
-		
-		<script>
-			jQuery(function($){
-				$('#squiffy').squiffy();
-				var restart = function () {
-					$('#squiffy').squiffy('restart');
-				};
-				$('#restart').click(restart);
-				$('#restart').keypress(function (e) {
-					if (e.which !== 13) return;
-					restart();
-				});
-			});
-		</script>
-		<link rel="stylesheet" href="style.css"/>
-	</head>
-	<body>
-		<div id="squiffy-container">
-			<div id="squiffy-header">
-				<a class="squiffy-header-link" id="restart" tabindex="0">Restart</a>
-			</div>
-			<div id="squiffy">
-			</div>
-		</div>
-	</body>
+</body>
 </html>
