--- a/games.html
+++ b/games.html
@@ -13,7 +13,7 @@
 <div class = "newgame">
     <h2>SUNRISE</h2>
     <p>Sunrise is a beginner level text adventure set in 18th century Paris.</p>
-    <button buttontype="button" class="btn btn-success btn-lg" onclick="location.href='index.html';">PLAY</button>
+    <button buttontype="button" class="btn btn-success btn-lg" onclick="location.href='sunrise.html';">PLAY</button>
 </div> 
 
 <div class = "newgame2">
