pushed faking sve

--- a/games.html
+++ b/games.html
@@ -14,7 +14,7 @@
     <h2>SUNRISE</h2>
     <p>Sunrise is a beginner level text adventure set in 18th century Paris.</p>
     <button buttontype="button" class="btn btn-success btn-lg" onclick="location.href='sunrise.html';">PLAY</button>
-    <!--please update for the love of god-->
+    <!--did it update?-->
 </div> 
 
 <div class = "newgame2">
