display grid and stuff

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class = "backgroundcolor">
+    <div class = "sve">
         <div class = "welcome">
             <h1>The Human Factor</h1>
             <p>The human factor is an old-school style text adventure game series proposed as a concept by a graphic design student researching the connection between decision making and connotations in an environment where the choice is put into context. The premise is that there could be a difference in answers when the subject is asked about a connection indirectly rather than directly, thus exploring a subconscious connection. Basically, the goal of the games is to analyse the answers of players in accordance to expected connotations of certain answers as distributed by age groups, gender and education.  We hope to analyse the results to compare them to our predictions, so it would be great if you could fill out the following:</p>
@@ -59,9 +59,9 @@
         </div>
         <div>
     </div>
-    <footer>
-        <p>Made by: Donata Butkovic (<a href="https://github.com/quantumnymph">quantumnymph </a> on github) with the help of <a href="https://github.com/textadventures/squiffy">squiffy</a></p>
-    </footer>
     </div>
 </body>
+<footer>
+    <p>Made by: Donata Butkovic (<a href="https://github.com/quantumnymph">quantumnymph </a> on github) with the help of <a href="https://github.com/textadventures/squiffy">squiffy</a></p>
+</footer>
 </html>
