styling and such

--- a/games.html
+++ b/games.html
@@ -9,18 +9,22 @@
   <link rel="stylesheet" href="welcome.css">
 </head>
 
-<div class = "columnwrapper">
-  <div class = "newgame">
-      <h2>SUNRISE</h2>
-      <p>Sunrise is a beginner level text adventure set in 18th century Paris.</p>
-      <button buttontype="button" class="btn btn-success btn-lg" onclick="location.href='sunrise.html';">PLAY</button>
-  </div> 
+<div class = "parent">
+<div class="child">
+  <div class = "columnwrapper">
+    <div class = "newgame">
+        <h2>SUNRISE</h2>
+        <p>Sunrise is a beginner level text adventure set in 18th century Paris.</p>
+        <br>
+        <button buttontype="button" class="btn btn-success btn-lg" onclick="location.href='sunrise.html';">PLAY</button>
+    </div> 
 
-  <div class = "newgame">
-      <h2>MORE GAMES</h2>
-      <p>...</p>
-</div> 
-
+    <div class = "newgame">
+        <h2>MORE GAMES</h2>
+        <p>. . .</p>
+    </div> 
+  </div>
+</div>
 </div>
 </body>
 </html>
